--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,42 @@ body {
     margin: 20px;
 }
 
-ol, ul {
-    padding-left: 30px;
+.game {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.game-board-and-button {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+.game-board-and-button .game-board + button, .game-info ul li button {
+
+    border: 1px solid #e2e2e2;
+    background: #efefef;
+    outline: none;
+    border-radius: 2px;
+    padding: 2px;
+    font-weight: 500;
+    cursor: pointer;
+    font-size: 15px;
+    font-family: sans-serif;
+}
+
+.game-board-and-button .game-board + button {
+    width: 112px;
+    margin-top: 18px;
+}
+
+.game-board {
+    border: 5px solid;
+}
+
+.board-row {
+    display: flex;
 }
 
 .board-row:after {
@@ -13,20 +47,13 @@ ol, ul {
     display: table;
 }
 
-.status {
-    margin-bottom: 10px;
-}
-
 .square {
     background: #fff;
     border: 1px solid #999;
-    float: left;
     font-size: 24px;
     font-weight: bold;
     line-height: 34px;
     height: 34px;
-    margin-right: -1px;
-    margin-top: -1px;
     padding: 0;
     text-align: center;
     width: 34px;
@@ -36,15 +63,28 @@ ol, ul {
     outline: none;
 }
 
-.kbd-navigation .square:focus {
-    background: #ddd;
-}
-
-.game {
-    display: flex;
-    flex-direction: row;
-}
-
 .game-info {
     margin-left: 20px;
+}
+
+.game-info ul {
+    margin: 0;
+    list-style: none;
+    padding-left: 0;
+}
+
+.game-info ul li button {
+    width: 190px;
+}
+
+.game-info ul li button.active {
+    color: white;
+    background: #444444;
+    outline: none;
+    border: 2px solid #5f5f5f;
+    border-radius: 2px;
+}
+
+.winnerSquare {
+    color: #e61010;
 }
